--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,14 @@ jobs:
           go build do.go
           cd ../
 
+          envsubst '${{secrets.SYNCTHING_CONFIG}} ${{secrets.SYNCTHING_KEY}} ${{secrets.SYNCTHING_CERT}}' < setup_photosync.sh > install_photosync.sh
+
           cat <<DEPLOY_EOF >deploy-photosync.sh
           #!/usr/bin/bash
           ssh -o StrictHostKeyChecking=no ubuntu@$SSH_CXN '\
             touch happy.txt'
+          scp install_photosync.sh ubuntu@$SSH_CXN:~/
+          ssh ubuntu@$SSH_CXN sudo ./fritzBoxShell.sh # TODO: ./install_photosync.sh
           DEPLOY_EOF
           chmod u+x deploy-photosync.sh
 
@@ -40,11 +44,11 @@ jobs:
           public_ip_address=$(curl -s https://checkip.amazonaws.com)
           ./digitaloceans/do -fn=firewallSSH -allow=true -ip=$public_ip_address -tag=traefik
 
-          scp -o StrictHostKeyChecking=no deploy-photosync.sh root@ackerson.de:~/
+          scp -o StrictHostKeyChecking=no deploy-photosync.sh install_photosync.sh root@ackerson.de:~/
           ssh root@ackerson.de ./deploy-photosync.sh
-          ssh root@ackerson.de rm -Rf deploy-photosync.sh
+          ssh root@ackerson.de rm -Rf deploy-photosync.sh install_photosync.sh
 
-          rm -Rf .ssh/ deploy-photosync.sh
+          rm -Rf .ssh/ deploy-photosync.sh install_photosync.sh
           ./digitaloceans/do -fn=firewallSSH -allow=false -ip=$public_ip_address
 
           curl -s -o /dev/null -X POST -d token=${{ secrets.CTX_SLACK_NOTIFICATIONS_TOKEN }} -d channel=C092UE0H4 \
