--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,9 +36,9 @@ jobs:
           ssh ubuntu@$SSH_CXN '\
             curl -o traefik/dynamic_conf.yml https://raw.githubusercontent.com/ackersonde/digitaloceans/main/scripts/dynamic_conf.yml
             chmod a+x ./install_photosync.sh && sudo ./install_photosync.sh && \
-            docker-compose -f ./photoprism/docker-compose.yml down && \
-            docker-compose -f ./photoprism/docker-compose.yml pull && \
-            docker-compose -f ./photoprism/docker-compose.yml up -d
+            docker compose -f ./photoprism/docker-compose.yml down && \
+            docker compose -f ./photoprism/docker-compose.yml pull && \
+            docker compose -f ./photoprism/docker-compose.yml up -d
           '
           DEPLOY_EOF
           chmod u+x deploy-photosync.sh
