--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,7 @@ services:
       PHOTOPRISM_DISABLE_FACES: "false"              # Disables facial recognition
       PHOTOPRISM_DISABLE_CLASSIFICATION: "false"     # Disables image classification
       PHOTOPRISM_DARKTABLE_PRESETS: "true"           # Enables Darktable presets and disables concurrent RAW conversion
-      PHOTOPRISM_FFMPEG_ENCODER: "h264_v4l2m2m"    # FFmpeg AVC encoder for video transcoding (default: libx264)
+      PHOTOPRISM_FFMPEG_ENCODER: "libx264"    # FFmpeg AVC encoder for video transcoding (default: libx264)
       PHOTOPRISM_FFMPEG_BUFFERS: "64"              # FFmpeg capture buffers (default: 32)
       PHOTOPRISM_DETECT_NSFW: "false"                # Flag photos as private that MAY be offensive
       PHOTOPRISM_UPLOAD_NSFW: "true"                 # Allow uploads that MAY be offensive
@@ -83,7 +83,7 @@ services:
     # user: "1000:1000"
     ## Hardware devices for video transcoding and machine learning (optional)
     devices:
-      - "/dev/video11:/dev/video11" # Video4Linux (h264_v4l2m2m)
+      - "/dev/video10:/dev/video10" # Video4Linux
     working_dir: "/photoprism"
     ## Storage Folders: "~" is a shortcut for your home directory, "." for the current directory
     volumes:
