--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,32 +44,32 @@ services:
     ports:
       - "2342:2342" # HTTP port (host:container)
     environment:
-      PHOTOPRISM_ADMIN_PASSWORD: "insecure"          # PLEASE CHANGE: Your initial admin password (min 4 characters)
-      PHOTOPRISM_SITE_URL: "https://photos.ackerson.de/"  # Public server URL incl http:// or https:// and /path, :port is optional
-      PHOTOPRISM_ORIGINALS_LIMIT: 5000               # File size limit for originals in MB (increase for high-res video)
-      PHOTOPRISM_HTTP_COMPRESSION: "none"            # Improves transfer speed and bandwidth utilization (none or gzip)
-      PHOTOPRISM_WORKERS: 2                          # Limits the number of indexing workers to reduce system load
-      PHOTOPRISM_DEBUG: "false"                      # Run in debug mode (shows additional log messages)
-      PHOTOPRISM_PUBLIC: "true"                     # No authentication required (disables password protection)
-      PHOTOPRISM_READONLY: "false"                   # Don't modify originals directory (reduced functionality)
-      PHOTOPRISM_EXPERIMENTAL: "false"               # Enables experimental features
-      PHOTOPRISM_DISABLE_CHOWN: "false"              # Disables storage permission updates on startup
-      PHOTOPRISM_DISABLE_WEBDAV: "false"             # Disables built-in WebDAV server
-      PHOTOPRISM_DISABLE_SETTINGS: "false"           # Disables Settings in Web UI
-      PHOTOPRISM_DISABLE_TENSORFLOW: "false"         # Disables all features depending on TensorFlow
-      PHOTOPRISM_DISABLE_FACES: "false"              # Disables facial recognition
-      PHOTOPRISM_DISABLE_CLASSIFICATION: "false"     # Disables image classification
-      PHOTOPRISM_DARKTABLE_PRESETS: "true"           # Enables Darktable presets and disables concurrent RAW conversion
-      PHOTOPRISM_FFMPEG_ENCODER: "libx264"    # FFmpeg AVC encoder for video transcoding (default: libx264)
-      PHOTOPRISM_FFMPEG_BUFFERS: "64"              # FFmpeg capture buffers (default: 32)
-      PHOTOPRISM_DETECT_NSFW: "false"                # Flag photos as private that MAY be offensive
-      PHOTOPRISM_UPLOAD_NSFW: "true"                 # Allow uploads that MAY be offensive
+      PHOTOPRISM_ADMIN_PASSWORD: "insecure" # PLEASE CHANGE: Your initial admin password (min 4 characters)
+      PHOTOPRISM_SITE_URL: "https://photos.ackerson.de/" # Public server URL incl http:// or https:// and /path, :port is optional
+      PHOTOPRISM_ORIGINALS_LIMIT: 5000 # File size limit for originals in MB (increase for high-res video)
+      PHOTOPRISM_HTTP_COMPRESSION: "none" # Improves transfer speed and bandwidth utilization (none or gzip)
+      PHOTOPRISM_WORKERS: 2 # Limits the number of indexing workers to reduce system load
+      PHOTOPRISM_DEBUG: "false" # Run in debug mode (shows additional log messages)
+      PHOTOPRISM_PUBLIC: "true" # No authentication required (disables password protection)
+      PHOTOPRISM_READONLY: "false" # Don't modify originals directory (reduced functionality)
+      PHOTOPRISM_EXPERIMENTAL: "false" # Enables experimental features
+      PHOTOPRISM_DISABLE_CHOWN: "false" # Disables storage permission updates on startup
+      PHOTOPRISM_DISABLE_WEBDAV: "false" # Disables built-in WebDAV server
+      PHOTOPRISM_DISABLE_SETTINGS: "false" # Disables Settings in Web UI
+      PHOTOPRISM_DISABLE_TENSORFLOW: "false" # Disables all features depending on TensorFlow
+      PHOTOPRISM_DISABLE_FACES: "false" # Disables facial recognition
+      PHOTOPRISM_DISABLE_CLASSIFICATION: "false" # Disables image classification
+      PHOTOPRISM_DARKTABLE_PRESETS: "true" # Enables Darktable presets and disables concurrent RAW conversion
+      PHOTOPRISM_FFMPEG_ENCODER: "libx264" # FFmpeg AVC encoder for video transcoding (default: libx264)
+      PHOTOPRISM_FFMPEG_BUFFERS: "64" # FFmpeg capture buffers (default: 32)
+      PHOTOPRISM_DETECT_NSFW: "false" # Flag photos as private that MAY be offensive
+      PHOTOPRISM_UPLOAD_NSFW: "true" # Allow uploads that MAY be offensive
       # PHOTOPRISM_DATABASE_DRIVER: "sqlite"         # SQLite is an embedded database that doesn't require a server
-      PHOTOPRISM_DATABASE_DRIVER: "mysql"            # Use MariaDB 10.5+ or MySQL 8+ instead of SQLite for improved performance
-      PHOTOPRISM_DATABASE_SERVER: "mariadb:3306"     # MariaDB or MySQL database server (hostname:port)
-      PHOTOPRISM_DATABASE_NAME: "photoprism"         # MariaDB or MySQL database schema name
-      PHOTOPRISM_DATABASE_USER: "photoprism"         # MariaDB or MySQL database user name
-      PHOTOPRISM_DATABASE_PASSWORD: "insecure"       # MariaDB or MySQL database user password
+      PHOTOPRISM_DATABASE_DRIVER: "mysql" # Use MariaDB 10.5+ or MySQL 8+ instead of SQLite for improved performance
+      PHOTOPRISM_DATABASE_SERVER: "mariadb:3306" # MariaDB or MySQL database server (hostname:port)
+      PHOTOPRISM_DATABASE_NAME: "photoprism" # MariaDB or MySQL database schema name
+      PHOTOPRISM_DATABASE_USER: "photoprism" # MariaDB or MySQL database user name
+      PHOTOPRISM_DATABASE_PASSWORD: "insecure" # MariaDB or MySQL database user password
       PHOTOPRISM_SITE_TITLE: "Ackerson Photos"
       PHOTOPRISM_SITE_CAPTION: "Bring the Ack Back"
       PHOTOPRISM_SITE_DESCRIPTION: ""
@@ -87,9 +87,9 @@ services:
     working_dir: "/photoprism"
     ## Storage Folders: "~" is a shortcut for your home directory, "." for the current directory
     volumes:
-      - "~/Pictures:/photoprism/originals"               # original media files (photos and videos)
-      - "~/syncthing/Camera/Camera:/photoprism/import"   # pics from Pixel6 device
-      - "./storage:/photoprism/storage"                  # *writable* storage folder for cache, database, and sidecar files (never remove)
+      - "~/Pictures:/photoprism/originals" # original media files (photos and videos)
+      - "~/syncthing/Camera/Camera:/photoprism/import" # pics from Pixel6 device
+      - "./storage:/photoprism/storage" # *writable* storage folder for cache, database, and sidecar files (never remove)
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.photoprism.tls.certResolver=letsencrypt"
@@ -151,7 +151,7 @@ services:
       - "~/traefik/dynamic_conf.yml:/dynamic_conf.yml"
       - "~/traefik/usersFile:/usersFile"
     command:
-      - "--api"
+      - "--api.dashboard=false"
       - "--accesslog.filepath=/var/log/traefik/access.log"
       - "--log.filepath=/var/log/traefik/traefik.log"
       - "--log.level=WARN"
@@ -178,5 +178,3 @@ services:
     ports:
       - "80:80"
       - "443:443"
-
-
