--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -172,6 +172,8 @@ services:
       - "--providers.file.filename=/dynamic_conf.yml"
       - "--entrypoints.web.address=:80"
       - "--entrypoints.secure.address=:443"
+      - "--entryPoints.web.forwardedHeaders.trustedIPs=172.19.0.1/24,fd00::/80"
+      - "--entryPoints.secure.forwardedHeaders.trustedIPs=172.19.0.1/24,fd00::/80"
       - "--certificatesResolvers.letsencrypt.acme.email=dan@ackerson.de"
       - "--certificatesResolvers.letsencrypt.acme.storage=acme.json"
     labels:
