--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -160,8 +160,10 @@ services:
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "~/traefik/logs:/var/log/traefik/"
-      - "~/traefik/dump/certs:/certs/"
-      - "~/traefik/dump/private:/keys/"
+      - "~/traefik/dump/certs/*.ackerson.de.crt:/certs/ackde.crt"
+      - "~/traefik/dump/private/*.ackerson.de.key:/keys/ackde.key"
+      - "~/traefik/dump/certs/hausmeisterservice-planb.de.crt:/certs/hausm.crt"
+      - "~/traefik/dump/private/hausmeisterservice-planb.de.key:/keys/hausm.key"
       - "~/traefik/dynamic_conf.yml:/dynamic_conf.yml"
       - "~/traefik/usersFile:/usersFile"
     command:
