--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
       PHOTOPRISM_HTTP_COMPRESSION: "none" # Improves transfer speed and bandwidth utilization (none or gzip)
       PHOTOPRISM_WORKERS: 2 # Limits the number of indexing workers to reduce system load
       PHOTOPRISM_DEBUG: "false" # Run in debug mode (shows additional log messages)
-      PHOTOPRISM_PUBLIC: "true" # No authentication required (disables password protection)
+      PHOTOPRISM_AUTH_MODE: "public" # authentication mode (public, password)
       PHOTOPRISM_READONLY: "false" # Don't modify originals directory (reduced functionality)
       PHOTOPRISM_EXPERIMENTAL: "false" # Enables experimental features
       PHOTOPRISM_DISABLE_CHOWN: "false" # Disables storage permission updates on startup
